--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
       uses: docker/build-push-action@v2
       with:
         context: .
-        file: ./Docker/Dockerfile
+        file: ./Docker/Dockerfile.user
         push: true
         tags: maniteja2601/paytm-app:latest  # Replace with your Docker Hub username and repository
 
