--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
-<<<<<<< HEAD
+
 {
-  "name": "week-18",
+  "name": "PayTM",
   "private": true,
   "scripts": {
     "build": "turbo build",
@@ -25,31 +25,4 @@
     "packages/*"
   ]
 }
-=======
-{
-  "name": "week-18",
-  "private": true,
-  "scripts": {
-    "build": "turbo build",
-    "dev": "turbo dev",
-    "lint": "turbo lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "db:generate":"cd ./packages/db && npx prisma generate && cd ../..",
-    "start-user-app": "cd ./apps/user-app && npm run start"
-  },
-  "devDependencies": {
-    "@repo/eslint-config": "*",
-    "@repo/typescript-config": "*",
-    "prettier": "^3.2.5",
-    "turbo": "latest"
-  },
-  "engines": {
-    "node": ">=18"
-  },
-  "packageManager": "npm@10.2.4",
-  "workspaces": [
-    "apps/*",
-    "packages/*"
-  ]
-}
->>>>>>> 58c0630321dea933cde9b8dab5c03c0dc8a085be
+
